# sprint_sbr

./: CMakeLists.txt  README.md  dependencies.repos  package.xml
config/: localization.yaml  sensors.xacro  sensors.yaml
launch/: boat_spawn.launch.py  fleet.launch.py  master.launch.py
msg/: ObjectArray.msg
scripts/: perception_node.py  twist2thrust.py
world/: ocean.sdf
